Fix Follow up menu that goes behind the nav bar

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -34,6 +34,10 @@ pre > code {
 }
 
 // Headers and top nav
+.banner {
+  z-index: 1500;
+}
+
 #cross-nav {
   background-color: transparent;
   a {
